Opened 10 years ago

Closed 10 years ago

#11615 closed bug (fixed)

[Tracker] Glitches in list view with some fonts

Reported by: Janus Owned by: Janus
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

With some fonts there are some glitches moving the selection to the next entry.

Two examples: Open Sans size 14, Cabin Size 16.

Attachments (2)

Font_Open_Sans_Size_14.png (131.6 KB ) - added by Janus 10 years ago.
Font_Cabin_Size_16.png (102.8 KB ) - added by Janus 10 years ago.

Download all attachments as: .zip

Change History (5)

by Janus, 10 years ago

Attachment: Font_Open_Sans_Size_14.png added

by Janus, 10 years ago

Attachment: Font_Cabin_Size_16.png added

comment:1 by humdinger, 10 years ago

Hi Janus!

Sorry to abuse this ticket's comment, but all my other tries to reach you were unsuccessful.

I'm not sure if you're aware of it, but you were suggested to be granted commit access to the Haiku repo. Normally, the people who'd like to have write permissions are the ones to ask for it, but why not the other way around for once...? :)

Anyway, if you haven't already you should subscribe to the haiku-development mailinglist [1] and post a reply to the thread "Proposal for commit access to Janus" [2]. It would be nice to read a few paragraphs about yourself and your background, hopes and dreams and all that...

Also, if you do want be part of the dev team, you should subscribe to the commits mailing list [3] if you're not on it already. It's the best way to keep up with the development and you are thus able to voice your opinion on matters.

Regards, Humdinger

[1] http://www.freelists.org/list/haiku-development [2] http://www.freelists.org/post/haiku-development/Proposal-for-commit-access-to-Janus [3] http://www.freelists.org/list/haiku-commits

comment:2 by Janus, 10 years ago

Owner: changed from axeld to Janus
Status: newassigned

comment:3 by Janus, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev49304.

Note: See TracTickets for help on using tickets.