Tracker: fix selection glitch with some fonts

* This problem was present for the fonts with total height
  greater than 19 and smaller than 20.
* Reduce distance between row with big fonts.
* Fixes #11615.